Add rel attributes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,8 +7,8 @@ const currentYear = new Date().getFullYear();
     <p>&copy; {currentYear} Victor Alberto</p>
   </div>
   <p class="socials">
-    <a target="_blank" href="https://www.linkedin.com/in/victormhp/"> LinkedIn</a>
-    <a target="_blank" href="https://github.com/victormhp"> GitHub</a>
+    <a target="_blank" href="https://www.linkedin.com/in/victormhp/" rel="noopener noreferrer"> LinkedIn</a>
+    <a target="_blank" href="https://github.com/victormhp" rel="noopener noreferrer"> GitHub</a>
   </p>
 </footer>
 <style>
