--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,23 +1,14 @@
 ---
 import Icon from "./Icon.astro";
 import { iconLinks } from "../config/socials";
+import Resume from "./Resume.astro";
 
 const textLinks: { label: string; href: string }[] = [
   { label: "Home", href: "#home" },
   { label: "About", href: "#about" },
   { label: "Work", href: "#work" },
   { label: "Contact", href: "#contact" },
-  { label: "Resume", href: "#contact" },
 ];
-
-const isLastTextLink = (link: string) => {
-  const lastTextLink = textLinks[textLinks.length - 1].label;
-
-  if (link === lastTextLink) {
-    return "resume";
-  }
-  return "link";
-};
 ---
 
 <nav>
@@ -53,7 +44,7 @@ const isLastTextLink = (link: string) => {
       <div class="socials">
         {
           iconLinks.map(({ href, icon, label }) => (
-            <a href={href} target="_blank" class="social">
+            <a class="social" href={href} target="_blank" rel="noopener noreferrer">
               <span class="sr-only">{label}</span>
               <Icon icon={icon} />
             </a>
@@ -67,18 +58,21 @@ const isLastTextLink = (link: string) => {
       {
         textLinks.map(({ label, href }) => (
           <li>
-            <a class={isLastTextLink(label)} href={href}>
+            <a class="link" href={href}>
               {label}
             </a>
           </li>
         ))
       }
+      <div>
+        <Resume>Resume</Resume>
+      </div>
     </ul>
     <div class="menu-footer">
       <div class="socials">
         {
           iconLinks.map(({ href, icon, label }) => (
-            <a href={href} target="_blank" class="social">
+            <a class="social" href={href} target="_blank" rel="noopener noreferrer">
               <span class="sr-only">{label}</span>
               <Icon icon={icon} />
             </a>
@@ -206,60 +200,6 @@ const isLastTextLink = (link: string) => {
 
   .link {
     color: var(--gray-800);
-  }
-
-  .resume {
-    border-radius: 0.25rem;
-    border: 2px solid var(--gray-800);
-    padding: 0.5rem 1rem;
-    background-color: var(--accent-light);
-    color: var(--gray-800);
-    box-shadow:
-      0.5px 1px 0 0 var(--gray-800),
-      1.5px 2px 0 0 var(--gray-800),
-      2.5px 3px 0 0 var(--gray-800),
-      3.5px 4px 0 0 var(--gray-800),
-      4.5px 5px 0 0 var(--gray-800),
-      5.5px 6px 0 0 var(--gray-800);
-    position: relative;
-    top: 0;
-    left: 0;
-    transform: rotateX(0) rotateY(0) rotateZ(0);
-    transition: all var(--theme-transition);
-    cursor: pointer;
-    display: inline-block;
-    outline: 2px dashed transparent;
-    position: relative;
-  }
-
-  .resume:hover {
-    background-color: var(--accent-regular);
-    box-shadow:
-      0 0 0 0 var(--black-200),
-      0 0 0 0 var(--black-200),
-      0 0 0 0 var(--black-200),
-      0 0 0 0 var(--black-200),
-      0 0 0 0 var(--black-200),
-      0 0 0 0 var(--black-200);
-    top: 6px;
-    left: 5.5px;
-    transform: rotateX(5deg) rotateY(3deg) rotateZ(0.25deg);
-  }
-
-  .resume:focus-visible {
-    --background: var(--bg-color);
-
-    box-shadow:
-      0 0 0 0 var(--gray-800),
-      0 0 0 0 var(--gray-800),
-      0 0 0 0 var(--gray-800),
-      0 0 0 0 var(--gray-800),
-      0 0 0 0 var(--gray-800),
-      0 0 0 0 var(--gray-800),
-      0 0 0 0 var(--gray-800),
-      0 0 0 2px var(--background),
-      0 0 0 4px var(--gray-800);
-    outline: none;
   }
 
   .menu-footer {
