--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -9,7 +9,7 @@ import { iconLinks } from "../config/socials";
       {
         iconLinks.map(({ href, icon, label }) => (
           <li>
-            <a href={href} target="_blank">
+            <a href={href} target="_blank" rel="noopener noreferrer">
               <span class="sr-only">{label}</span>
               <Icon icon={icon} />
             </a>
