Fix scroll padding

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -74,7 +74,7 @@ html,
 body {
   height: 100%;
   scroll-behavior: smooth;
-  scroll-padding-top: 8rem;
+  scroll-padding-top: 6rem;
 }
 
 body {
@@ -231,6 +231,11 @@ h5 {
 }
 
 @media (min-width: 50em) {
+  html,
+  body {
+    scroll-padding-top: 8rem;
+  }
+
   .wrapper {
     --wrapper-padding: 17rem;
   }
