--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -168,8 +168,8 @@ const textLinks: { label: string; href: string }[] = [
 
   .menu-content {
     position: fixed;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: 100;
     top: 0;
     left: 0;
