--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ContactCTA from "../components/ContactCTA.astro";
 
 <BaseLayout>
   <main class="stack gap-20 lg:gap-20">
-    <section class="home wrapper stack gap-8 lg:gap-20">
+    <section class="layout wrapper stack gap-8 lg:gap-20">
       <Home />
     </section>
     <section id="about">
@@ -24,8 +24,21 @@ import ContactCTA from "../components/ContactCTA.astro";
 </BaseLayout>
 
 <style>
-  .home {
-    min-height: 100svh;
+  main {
+    padding-top: 5rem;
+  }
+
+  .layout {
+    min-height: calc(100svh - 6rem);
     justify-content: center;
+  }
+
+  @media (min-width: 50em) {
+    main {
+      padding-top: 0;
+    }
+    .layout {
+      min-height: 100svh;
+    }
   }
 </style>
