--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,7 +7,7 @@ interface Props {
   description?: string | undefined;
 }
 
-const { title = "Victor Alberto", description = "The personal site of Victor Alberto" } = Astro.props;
+const { title = "Hi, I'm Victor", description = "The personal site of Victor Alberto" } = Astro.props;
 ---
 
 <meta charset="UTF-8" />
