--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,12 +18,11 @@ const { title, description } = Astro.props;
     <MainHead {title} {description} />
   </head>
   <body>
-    <div id="home" class="base-container gap-10 lg:gap-20">
+    <div class="base-container">
       <Nav />
       <Socials />
       <Email />
       <slot />
-      <Footer />
     </div>
 
     <script>
