--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,52 +1,95 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Home from "../components/Home.astro";
-import About from "../components/About.astro";
-import Work from "../components/Work.astro";
-import Projects from "../components/Projects.astro";
-import ContactCTA from "../components/ContactCTA.astro";
+import Button from "../components/Button.astro";
+import Hero from "../components/Hero.astro";
 ---
 
 <BaseLayout>
-  <main class="stack gap-20 lg:gap-20">
-    <section id="#home" class="layout wrapper stack gap-8 lg:gap-20">
-      <Home />
-    </section>
-    <section id="work">
-      <Work />
-    </section>
-    <section id="projects">
-      <Projects />
-    </section>
-    <section id="about">
-      <About />
-    </section>
-    <section id="contact">
-      <ContactCTA />
-    </section>
+  <main class="wrapper hero">
+    <Hero
+      title="Software Developer"
+      tagline="Hi, I'm Victor Alberto. A passionate software engineer student based in Guerrero, Mexico."
+      align="start"
+    >
+      <div class="hero-cta">
+        <Button href="/about" color="bg-green">About me</Button>
+        <Button href="/portfolio" color="bg-blue">Check out my work!</Button>
+      </div>
+    </Hero>
+    <div class="hero-img">
+      <img alt="Victor Alberto smiling to the camera in front of his setup." width="480" height="620" src="/assets/portrait.webp" />
+    </div>
   </main>
 </BaseLayout>
 
 <style>
   main {
-    padding-top: 5rem;
-  }
-
-  section:not(#home, #contact) {
-    margin-bottom: 6rem;
-  }
-
-  .layout {
-    min-height: calc(100svh - 6rem);
+    display: flex;
+    align-items: center;
     justify-content: center;
   }
 
-  @media (min-width: 50em) {
-    main {
-      padding-top: 0;
+  .hero {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem;
+  }
+
+  .hero-cta {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  .hero-img img {
+    aspect-ratio: 5/4;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 1rem;
+  }
+
+  @media (min-width: 64em) {
+    .hero {
+      display: grid;
+      grid-template-columns: 6fr 4fr;
+      padding-inline: 2.5rem;
+      gap: 3.75rem;
     }
-    .layout {
-      min-height: 100svh;
+
+    .hero-cta {
+      flex-direction: row;
+    }
+
+    .hero-img {
+      width: 100%;
+      position: relative;
+      display: block;
+      border-radius: 0.5rem;
+    }
+
+    .hero-img img {
+      aspect-ratio: 3/4;
+      object-fit: cover;
+      border-radius: 0.5rem;
+    }
+
+    .hero-img::before,
+    .hero-img::after {
+      content: "";
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 0.5rem;
+    }
+
+    .hero-img::after {
+      border: 2px solid var(--accent-dark);
+      top: 15px;
+      left: 20px;
+      z-index: -1;
     }
   }
 </style>
