--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -68,16 +68,14 @@ const textLinks = [
       </div>
     </ul>
     <div class="menu-footer">
-      <div class="socials">
-        {
-          iconLinks.map(({ href, icon, label }) => (
-            <a class="social" href={href} target="_blank" rel="noopener noreferrer">
-              <span class="sr-only">{label}</span>
-              <Icon icon={icon} />
-            </a>
-          ))
-        }
-      </div>
+      {
+        iconLinks.map(({ href, icon, label }) => (
+          <a class="social" href={href} target="_blank" rel="noopener noreferrer">
+            <span class="sr-only">{label}</span>
+            <Icon icon={icon} />
+          </a>
+        ))
+      }
     </div>
   </div>
 </nav>
@@ -146,7 +144,7 @@ const textLinks = [
     align-items: center;
     font-size: var(--text-lg);
     font-weight: 600;
-    color: var(--gray-900);
+    color: var(--gray-800);
   }
 
   .menu-button {
@@ -173,7 +171,7 @@ const textLinks = [
     display: flex;
     flex-direction: column;
     background-color: var(--bg-color);
-    transform: translate(-100%);
+    transform: translate(100%);
     transition: transform 300ms ease-in-out;
   }
 
@@ -199,19 +197,23 @@ const textLinks = [
     color: var(--gray-800);
   }
 
+  .menu-open {
+    & .link {
+      font-size: var(--text-2xl);
+    }
+    & .resume {
+      font-size: var(--text-2xl);
+    }
+  }
+
   .menu-footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 0.75rem;
     padding: 1.5rem 2rem;
     background-color: var(--bg-color);
     box-shadow: var(--shadow-footer);
     border-radius: 0 0 0.75rem 0.75rem;
-  }
-
-  .socials {
-    display: flex;
-    gap: 0.75rem;
     font-size: var(--text-2xl);
   }
 
