--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,6 +23,7 @@ const { title, description } = Astro.props;
       <Socials />
       <Email />
       <slot />
+      <Footer />
     </div>
 
     <script>
