--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -119,7 +119,7 @@ h5 {
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--gray-600);
+  background-color: var(--gray-800);
   border-radius: 100vw;
 }
 
@@ -153,7 +153,7 @@ h5 {
 .base-container {
   min-height: 100vh;
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto 1fr auto;
 }
 
 .wrapper {
@@ -212,6 +212,10 @@ h5 {
   gap: 1rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .gap-8 {
   gap: 2rem;
 }
@@ -253,6 +257,10 @@ h5 {
 
   .lg\:gap-4 {
     gap: 1rem;
+  }
+
+  .lg\:gap-6 {
+    gap: 1.5rem;
   }
 
   .lg\:gap-8 {
