--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,32 +2,39 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Subtitle from "../components/Subtitle.astro";
 
-const skills = "https://skillicons.dev/icons?i=python,flask,express,postgres,html,css,javascript,typescript,react,svelte,d3&perline=6";
+const skills = "https://skillicons.dev/icons?i=python,go,typescript,flask,express,postgres,mysql,docker,html,css,react,svelte&perline=7";
 ---
 
 <BaseLayout>
   <main class="wrapper">
-    <Subtitle>About</Subtitle>
+    <Subtitle>About Me</Subtitle>
     <div class="about">
-      <div class="stack gap-8">
+      <div class="stack gap-10">
         <div>
-          <h3>Background</h3>
           <p>
-            Currently a computing systems student based in Guerrero, Mexico, with a keen interest in web development and data science. As I
-            delved deeper into programming and math, I discovered their synergy in data analysis and web development, igniting a passion for
-            exploring their endless possibilities.
+            Hello! I'm Victor, a <span>software engineer</span> student based in Guerrero, Mexico. I chose to pursue programming because I
+            love crafting innovative solutions to a variety of problems.
           </p>
           <p>
-            I'm passionate about learning and constantly improving my skills. In my free time, I enjoy going to the gym, playing music, and
-            strumming the guitar.
+            As a dedicated and enthusiastic
+            <span>web developer</span>, creating <span>responsive</span> and <span>user-friendly</span> web applications is my bread and
+            butter.
+          </p>
+          <p>
+            Always eager to explore new technologies and tools. When I'm not coding, you'll find me hitting the gym, playing music, or
+            strumming my guitar.
           </p>
         </div>
-        <div class="stack gap-4">
+        <div class="tech">
           <h3>Technologies</h3>
           <img src={skills} alt="skill-icons" />
         </div>
       </div>
-      <img class="desktop" src="/assets/about.webp" alt="My i3 Debian desktop." />
+      <div>
+        <div class="about-image">
+          <img src="/assets/about.webp" alt="My i3 Debian desktop." />
+        </div>
+      </div>
     </div>
   </main>
 </BaseLayout>
@@ -38,7 +45,7 @@ const skills = "https://skillicons.dev/icons?i=python,flask,express,postgres,htm
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2rem 0;
+    padding: 2rem;
   }
 
   .about {
@@ -48,14 +55,15 @@ const skills = "https://skillicons.dev/icons?i=python,flask,express,postgres,htm
     gap: 2rem;
   }
 
-  .desktop {
-    border-radius: 0.5rem;
+  .about-image img {
+    border-radius: 0.25rem;
+    object-fit: cover;
   }
 
   h3 {
     font-size: var(--text-lg);
     font-family: var(--font-brand);
-    padding-bottom: 0.5em;
+    padding-bottom: 1rem;
   }
 
   p {
@@ -63,12 +71,37 @@ const skills = "https://skillicons.dev/icons?i=python,flask,express,postgres,htm
     margin-bottom: 1rem;
   }
 
+  span {
+    font-weight: 600;
+    color: var(--accent-dark);
+  }
+
   @media (min-width: 64em) {
     .about {
       display: grid;
-      grid-template-columns: 5fr 6fr;
-      align-items: start;
-      gap: 4rem;
+      grid-template-columns: 6fr 5fr;
+      gap: 3rem;
+    }
+
+    .about-image {
+      position: relative;
+
+      &::before,
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 0.5rem;
+      }
+
+      &::after {
+        border: 2px solid var(--accent-dark);
+        top: 8px;
+        left: 15px;
+        z-index: -1;
+      }
     }
   }
 </style>
