--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,6 @@ import Hero from "../components/Hero.astro";
     .hero {
       display: grid;
       grid-template-columns: 6fr 4fr;
-      padding-inline: 2.5rem;
       gap: 3.75rem;
     }
 
@@ -67,29 +66,28 @@ import Hero from "../components/Hero.astro";
       position: relative;
       display: block;
       border-radius: 0.5rem;
-    }
 
-    .hero-img img {
-      aspect-ratio: 3/4;
-      object-fit: cover;
-      border-radius: 0.5rem;
-    }
+      & img {
+        aspect-ratio: 3/4;
+        border-radius: 0.5rem;
+      }
 
-    .hero-img::before,
-    .hero-img::after {
-      content: "";
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      border-radius: 0.5rem;
-    }
+      &::before,
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 0.5rem;
+      }
 
-    .hero-img::after {
-      border: 2px solid var(--accent-dark);
-      top: 15px;
-      left: 20px;
-      z-index: -1;
+      &::after {
+        border: 2px solid var(--accent-dark);
+        top: 15px;
+        left: 20px;
+        z-index: -1;
+      }
     }
   }
 </style>
