--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,11 +15,10 @@ const currentYear = new Date().getFullYear();
 <style>
   footer {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 0.25rem;
-    padding: 3rem 4rem 1rem;
+    gap: 1rem;
+    padding: 1.5rem 1rem;
     text-align: center;
     color: var(--gray-600);
     font-size: var(--text-sm);
@@ -50,11 +49,6 @@ const currentYear = new Date().getFullYear();
   }
 
   @media (min-width: 50em) {
-    footer {
-      flex-direction: row;
-      gap: 1rem;
-    }
-
     .group {
       gap: 1rem;
       flex-wrap: wrap;
