--- a/src/components/Subtitle.astro
+++ b/src/components/Subtitle.astro
@@ -10,6 +10,7 @@
     align-items: center;
     font-size: var(--text-xl);
     padding-bottom: 1em;
+    white-space: nowrap;
   }
 
   .subtitle::after {
@@ -17,7 +18,7 @@
     display: block;
     position: relative;
     top: 2px;
-    width: 200px;
+    width: 100%;
     height: 1px;
     margin-left: 20px;
     background-color: var(--accent-dark);
