--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -8,8 +8,8 @@ const projects = await getCollection("proyects");
 ---
 
 <BaseLayout>
-  <main class="wrapper stack gap-10 lg:gap-20">
-    <section class="stack gap-4">
+  <main class="wrapper stack gap-15 lg:gap-20">
+    <section>
       <Subtitle>Work</Subtitle>
       <ul class="stack gap-10 lg:gap-15">
         {
@@ -24,7 +24,7 @@ const projects = await getCollection("proyects");
         }
       </ul>
     </section>
-    <section class="stack gap-4">
+    <section>
       <Subtitle>Projects</Subtitle>
       <ul class="stack gap-10 lg:gap-15">
         {
