--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -4,7 +4,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout title="Not Found" description="404 Error — this page was not found">
-  <main class="wrapper stack gap-8 lg:gap-20">
+  <main class="wrapper stack gap-8 lg:gap-20" transition:animate="slide">
     <Hero title="Page Not Found" tagline="Not found" />
   </main>
 </BaseLayout>
