--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ const skills = "https://skillicons.dev/icons?i=python,go,typescript,flask,expres
 ---
 
 <BaseLayout>
-  <main class="wrapper">
+  <main class="wrapper" transition:animate="slide">
     <Subtitle>About Me</Subtitle>
     <div class="about">
       <div class="stack gap-10">
