--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Hero from "../components/Hero.astro";
 ---
 
 <BaseLayout>
-  <main class="wrapper hero">
+  <main class="wrapper hero" transition:animate="slide">
     <Hero
       title="Software Developer"
       tagline="Hi, I'm Victor Alberto. A passionate software engineer student based in Guerrero, Mexico."
