--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -8,7 +8,7 @@ const projects = await getCollection("proyects");
 ---
 
 <BaseLayout>
-  <main class="wrapper stack gap-15 lg:gap-20">
+  <main class="wrapper stack gap-15 lg:gap-20" transition:animate="slide">
     <section>
       <Subtitle>Work</Subtitle>
       <ul class="stack gap-10 lg:gap-15">
