--- a/src/components/Email.astro
+++ b/src/components/Email.astro
@@ -2,52 +2,26 @@
 const email = "victoralbertomhp@gmail.com";
 ---
 
-<div class="side">
-  <div class="link">
-    <a href=`mailto:${email}`>{email}</a>
+<div class="fixed right-10 bottom-0 left-auto z-10 hidden w-10 md:block">
+  <div class="link after:my:auto relative flex flex-col items-center justify-center">
+    <a
+      class="font-brand hover:text-dark focus-visible:text-dark mx-5 my-auto p-1 text-gray-800 transition-all hover:-translate-y-1 focus-visible:-translate-y-1"
+      href=`mailto:${email}`>{email}</a
+    >
   </div>
 </div>
 
 <style>
-  .side {
-    position: fixed;
-    bottom: 0;
-    right: 40px;
-  }
-
-  .link {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-  }
-
   .link:after {
     content: "";
     display: block;
-    width: 1px;
+    width: 2px;
     height: 90px;
     margin: 0 auto;
-    background-color: var(--gray-800);
+    background-color: var(--color-gray-800);
   }
 
   a {
-    font-family: var(--font-brand);
     writing-mode: vertical-rl;
-    color: var(--gray-800);
-    margin: 20px auto;
-    padding: 10px;
-    transition: all var(--theme-transition);
-  }
-
-  a:is(:hover, :focus) {
-    color: var(--accent-dark);
-    transform: translateY(-3px);
-  }
-
-  @media (max-width: 50em) {
-    .side {
-      display: none;
-    }
   }
 </style>
