--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,65 +1,40 @@
 ---
 import Icon from "./Icon.astro";
 import Resume from "./Resume.astro";
-import { iconLinks } from "../config/socials";
-import { navigate } from 'astro:transitions/client';
+import { socialsArray, pages } from "../config.ts";
 
-
-const textLinks = [
-  { label: "Portfolio", href: "/portfolio" },
-  { label: "About", href: "/about" },
-  { label: "Contact", href: "/contact" },
-];
+const currentPage = Astro.url.pathname;
 ---
 
-<nav>
-  <div class="menu-header">
-    <a href="/" class="site-title">
-      <Icon icon="terminal-window" color="var(--accent-dark)" size="1.6em" />
-       Victor.dev
+<nav
+  class="font-brand z-10 my-auto w-full border-b-2 border-gray-800 bg-gray-50 px-2 md:flex md:items-center md:justify-between md:gap-4 md:px-8 md:py-2"
+>
+  <div class="md:pd-0 flex justify-between gap-2 px-2 py-4">
+    <a class="hover:text-dark focus-visible:text-dark flex items-center gap-2 transition-colors text-xl" href="/">
+      <Icon icon="terminal" size="1.6em" />
+      Victor.dev
     </a>
-    <menu-button>
-      <template>
-        <button class="menu-button">
-          <span class="sr-only">Menu</span>
-          <Icon icon="list" />
-        </button>
-      </template>
-    </menu-button>
+    <button
+      id="hamburger"
+      class="aria-expanded:text-dark focus-visible:text-dark relative z-50 flex border-0 bg-transparent p-0.5 md:hidden"
+    >
+      <span class="sr-only">Menu</span>
+      <Icon icon="list" size="1.5em" />
+    </button>
   </div>
-  <noscript>
-    <ul class="nav-items">
+  <div
+    id="nav-menu"
+    class="fixed top-0 left-0 z-40 flex h-full w-full translate-x-full flex-col bg-gray-50 transition-transform md:contents"
+  >
+    <ul
+      class="m-0 flex flex-1 flex-col items-center justify-center gap-16 p-8 text-2xl md:flex-row md:justify-end md:border-0 md:p-4 md:text-base"
+    >
       {
-        textLinks.map(({ label, href }) => (
-          <li class="link-wrapper">
-            <a class="link" href={href}>
-              {label}
-            </a>
-          </li>
-        ))
-      }
-    </ul>
-  </noscript>
-  <noscript>
-    <div class="menu-footer">
-      <div class="socials">
-        {
-          iconLinks.map(({ href, icon, label }) => (
-            <a class="social" href={href} target="_blank" rel="noopener noreferrer">
-              <span class="sr-only">{label}</span>
-              <Icon icon={icon} />
-            </a>
-          ))
-        }
-      </div>
-    </div>
-  </noscript>
-  <div class="menu-content">
-    <ul class="nav-items">
-      {
-        textLinks.map(({ label, href }) => (
-          <li>
-            <a class="link" href={href}>
+        pages.map(({ label, href }) => (
+          <li
+            class:list={["hover:underline-lift focus-visible:underline-lift transition-all", currentPage == href ? "underline-lift" : ""]}
+          >
+            <a class="text-gray-800" {href}>
               {label}
             </a>
           </li>
@@ -69,12 +44,12 @@ const textLinks = [
         <Resume>Resume</Resume>
       </div>
     </ul>
-    <div class="menu-footer">
+    <div class="flex justify-around gap-4 border-t-2 border-gray-800 bg-gray-50 p-4 text-2xl md:hidden">
       {
-        iconLinks.map(({ href, icon, label }) => (
-          <a class="social" href={href} target="_blank" rel="noopener noreferrer">
+        socialsArray.map(({ href, icon, label }) => (
+          <a class="link flex p-2 text-gray-800 transition-colors" href={href} target="_blank" rel="noopener noreferrer">
             <span class="sr-only">{label}</span>
-            <Icon icon={icon} />
+            <Icon icon={icon} size="1.5em" />
           </a>
         ))
       }
@@ -83,193 +58,46 @@ const textLinks = [
 </nav>
 
 <script>
-import { navigate } from "astro/transitions/router";
+  function initMobileMenu() {
+    const body = document.body;
+    const btn = document.querySelector("#hamburger");
+    const menu = document.querySelector("#nav-menu");
+    const navLinks = document.querySelectorAll(".link");
 
-  class MenuButton extends HTMLElement {
-    constructor() {
-      super();
+    const isMenuOpened = (): boolean => {
+      return body.getAttribute("data-menu-open") == "true";
+    };
 
-      // Inject menu toggle button when JS runs.
-      this.appendChild(this.querySelector("template")!.content.cloneNode(true));
-      const btn = this.querySelector("button")!;
+    const toggleMenu = () => {
+      if (isMenuOpened()) {
+        body.setAttribute("data-menu-open", "false");
+        btn.setAttribute("aria-expanded", "false");
+      } else {
+        body.setAttribute("data-menu-open", "true");
+        btn.setAttribute("aria-expanded", "true");
+      }
+      menu.classList.toggle("translate-x-full");
+      menu.classList.toggle("translate-x-0");
+    };
 
-      const body = document.body;
-      const menu = document.querySelector(".menu-content");
-      const navLinks = document.querySelectorAll(".link");
+    btn.addEventListener("click", () => toggleMenu());
 
-      const setExpanded = () => {
-        btn.toggleAttribute("aria-expanded");
-        body.toggleAttribute("data-menu-open");
-        menu.classList.toggle("menu-open");
-      };
-
-      btn.addEventListener("click", () => setExpanded());
-
-      navLinks.forEach((link) => {
-        link.addEventListener("click", (event) => {
-          if (menu.classList.contains("menu-open")) {
-            event.preventDefault();
-            setExpanded();
-            setTimeout(() => navigate(link.getAttribute("href")), 300)
-          }
-        });
+    navLinks.forEach((link) => {
+      link.addEventListener("click", (event) => {
+        if (isMenuOpened()) {
+          event.preventDefault();
+          toggleMenu();
+        }
       });
-    }
+    });
   }
 
-  customElements.define("menu-button", MenuButton);
+  document.addEventListener("astro:after-swap", () => initMobileMenu());
+  initMobileMenu();
 </script>
 
 <style>
   :global(body[data-menu-open]) {
     overflow-y: hidden;
-  }
-
-  nav {
-    width: 100%;
-    z-index: 9999;
-    margin: 0 auto;
-    padding: 0.5rem 0rem;
-    background-color: var(--bg-color);
-    box-shadow: var(--shadow-nav);
-    font-family: var(--font-brand);
-    font-weight: 500;
-  }
-
-  .menu-header {
-    display: flex;
-    justify-content: space-between;
-    gap: 0.5rem;
-    padding: 0.5rem 1.5rem;
-  }
-
-  .site-title {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    font-size: var(--text-lg);
-    font-weight: 600;
-    color: var(--gray-800);
-  }
-
-  .menu-button {
-    position: relative;
-    z-index: 9999;
-    display: flex;
-    border: 0;
-    padding: 0.5rem;
-    font-size: 1.5rem;
-    background-color: transparent;
-  }
-
-  .menu-button[aria-expanded] {
-    color: var(--accent-dark);
-  }
-
-  .menu-content {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--bg-color);
-    transform: translate(100%);
-    transition: transform 300ms ease-in-out;
-  }
-
-  .menu-open {
-    transform: translate(0);
-  }
-
-  .nav-items {
-    margin: 0;
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 2.5rem;
-    font-size: var(--text-xl);
-    line-height: 1.2;
-    list-style: none;
-    padding: 2rem;
-  }
-
-  .link {
-    color: var(--gray-800);
-  }
-
-  .menu-footer {
-    display: flex;
-    justify-content: space-around;
-    gap: 0.75rem;
-    padding: 1.5rem 2rem;
-    background-color: var(--bg-color);
-    box-shadow: var(--shadow-footer);
-    border-radius: 0 0 0.75rem 0.75rem;
-    font-size: var(--text-2xl);
-  }
-
-  .social {
-    display: flex;
-    padding: 0.5rem;
-    color: var(--gray-800);
-    transition: color var(--theme-transition);
-  }
-
-  @media (min-width: 50em) {
-    nav {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 1rem;
-      padding: 0.75rem 3rem;
-    }
-
-    .menu-header {
-      padding: 0;
-    }
-
-    .menu-button {
-      display: none;
-    }
-
-    .menu-content {
-      display: contents;
-    }
-
-    .nav-items {
-      flex-direction: row;
-      justify-content: end;
-      font-size: var(--text-md);
-      border: 0;
-      padding: 0.5rem 0.5625rem;
-    }
-
-    .link {
-      position: relative;
-      top: 0;
-      transition:
-        top 0.35s,
-        padding 0.5s,
-        box-shadow 0.4s,
-        border 0.15s;
-      border-bottom: 0.1rem solid transparent;
-      box-shadow: 0 0 0 0 var(--accent-regular);
-    }
-
-    .link:is(:hover, :focus) {
-      top: -0.35rem;
-      padding-bottom: 0.35rem;
-      border-bottom: 0.2rem solid var(--accent-dark);
-      box-shadow: 0 0.4rem 0 -0.2rem var(--accent-regular);
-    }
-
-    .menu-footer {
-      display: none;
-    }
   }
 </style>
