--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,17 +1,22 @@
 ---
 import Icon from "./Icon.astro";
-import { iconLinks } from "../config/socials";
+import { socialsArray } from "../config.ts";
 ---
 
-<div class="side">
-  <div class="socials-wrapper">
-    <ul class="socials">
+<div class="fixed right-auto bottom-0 left-10 z-10 hidden w-10 md:block">
+  <div class="relative flex flex-col items-center justify-center">
+    <ul class="flex flex-col gap-6 text-2xl">
       {
-        iconLinks.map(({ href, icon, label }) => (
+        socialsArray.map(({ href, icon, label }) => (
           <li>
-            <a href={href} target="_blank" rel="noopener noreferrer">
+            <a
+              class="hover:text-dark focus-visible:text-dark flex p-0.5 text-gray-800 transition-all hover:-translate-y-1 focus-visible:translate-y-1"
+              href={href}
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <span class="sr-only">{label}</span>
-              <Icon icon={icon}  />
+              <Icon icon={icon} size="1.25em" />
             </a>
           </li>
         ))
@@ -21,56 +26,12 @@ import { iconLinks } from "../config/socials";
 </div>
 
 <style>
-  .side {
-    position: fixed;
-    bottom: 0;
-    left: 40px;
-    right: auto;
-  }
-
-  .socials-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-  }
-
-  .socials-wrapper:after {
+  ul:after {
     content: "";
     display: block;
-    width: 1px;
+    width: 2px;
     height: 90px;
     margin: 0 auto;
-    background-color: var(--gray-800);
-  }
-
-  .socials {
-    display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
-    font-size: 1.75rem;
-  }
-
-  .socials a {
-    display: flex;
-    padding: 0.25rem;
-    color: var(--gray-800);
-    transition: all var(--theme-transition);
-  }
-
-  .socials li:last-child {
-    padding-bottom: 2rem;
-  }
-
-  .socials a:is(:hover, :focus-visible) {
-    color: var(--accent-dark);
-    transform: translateY(-3px);
-  }
-
-  @media (max-width: 50em) {
-    .side {
-      display: none;
-    }
+    background-color: var(--color-gray-800);
   }
 </style>
