--- a/src/components/Subtitle.astro
+++ b/src/components/Subtitle.astro
@@ -1,41 +1,21 @@
-<h2 class="subtitle">
+<h2 class="font-recoleta w-100 relative flex items-center text-2xl pb-8 whitespace-nowrap lg:text-4xl">
   <slot />
 </h2>
 
 <style>
-  .subtitle {
-    width: 100%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    font-size: var(--text-xl);
-    padding-bottom: 1em;
-    white-space: nowrap;
-  }
-
-  .subtitle::after {
+  h2::after {
     content: "";
     display: block;
     position: relative;
     top: 2px;
     width: 100%;
-    height: 1px;
+    height: 2px;
     margin-left: 20px;
-    background-color: var(--accent-dark);
-  }
-
-  @media (min-width: 50em) {
-    .subtitle {
-      font-size: var(--text-2xl);
-    }
+    background-color: var(--color-gray-800);
   }
 
   @media (min-width: 64em) {
-    .subtitle {
-      font-size: var(--text-3xl);
-    }
-
-    .subtitle::after {
+    h2::after {
       width: 300px;
     }
   }
