--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,44 +5,17 @@ import Hero from "../components/Hero.astro";
 ---
 
 <BaseLayout>
-  <main class="wrapper hero" transition:animate="slide">
-    <Hero
-      title="Software Developer"
-      tagline="Hi, I'm Victor Alberto. A passionate software engineer student based in Guerrero, Mexico."
-      align="start"
-    >
-      <div class="hero-cta">
-        <Button href="/about" color="bg-green">About me</Button>
-        <Button href="/portfolio" color="bg-blue">Check out my work!</Button>
+  <main class="wrapper flex flex-col-reverse justify-center gap-2 p-2" transition:animate="slide">
+    <Hero>
+      <div class="flex flex-col gap-8 lg:flex-row">
+        <Button href="/about" color="bg-btn-green">About me</Button>
+        <Button href="/work" color="bg-btn-blue">Check out my work!</Button>
       </div>
     </Hero>
-    <div class="hero-img">
-      <img alt="Victor Alberto smiling to the camera in front of his setup." width="480" height="620" src="/assets/portrait.webp" />
-    </div>
   </main>
 </BaseLayout>
 
 <style>
-  main {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .hero {
-    display: flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    gap: 2rem;
-    padding: 2rem;
-  }
-
-  .hero-cta {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-  }
-
   .hero-img img {
     aspect-ratio: 5/4;
     object-fit: cover;
@@ -51,16 +24,6 @@ import Hero from "../components/Hero.astro";
   }
 
   @media (min-width: 64em) {
-    .hero {
-      display: grid;
-      grid-template-columns: 6fr 4fr;
-      gap: 3.75rem;
-    }
-
-    .hero-cta {
-      flex-direction: row;
-    }
-
     .hero-img {
       width: 100%;
       position: relative;
