--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
-/* Fonts */
+@import "tailwindcss";
+
 @font-face {
   font-family: "Recoleta";
   src:
@@ -11,105 +12,101 @@
   font-style: normal;
 }
 
-/* Global variables */
-:root {
-  /* Colors */
-  --gray-100: #f9fafb;
-  --gray-200: #f3f4f6;
-  --gray-300: #e5e7eb;
-  --gray-400: #d1d5db;
-  --gray-500: #9ca3af;
-  --gray-600: #6b7280;
-  --gray-700: #4b5563;
-  --gray-800: #374151;
-  --gray-900: #1f2937;
-  --gray-950: #111827;
-  --gray-999: #030712;
-
-  --accent-light: #e9d5ff;
-  --accent-regular: #d8b4fe;
-  --accent-dark: #a855f7;
-
-  --bg-color: var(--gray-100);
-  --shadow-letter: var(--accent-light);
-  --link-color: var(--accent-regular);
-
-  /* Shadows */
-  --shadow-nav: 0px 6px 3px rgba(9, 11, 17, 0.01), 0px 4px 2px rgba(9, 11, 17, 0.01), 0px 2px 2px rgba(9, 11, 17, 0.02),
-    0px 0px 1px rgba(9, 11, 17, 0.03);
-  --shadow-footer: 0px 6px 3px rgba(9, 11, 17, 0.01), 0px -4px 2px rgba(9, 11, 17, 0.01), 0px -2px 2px rgba(9, 11, 17, 0.02),
-    0px 0px 1px rgba(9, 11, 17, 0.03);
-
-  /* Text Sizes */
-  --text-sm: 0.875rem;
-  --text-base: 1rem;
-  --text-md: 1.125rem;
-  --text-lg: 1.25rem;
-  --text-xl: 1.625rem;
-  --text-2xl: 2.125rem;
-  --text-3xl: 2.625rem;
-  --text-4xl: 3.5rem;
-  --text-5xl: 4.5rem;
-  --text-6xl: 6rem;
-
+@theme {
   /* Fonts */
   --font-system: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
   --font-body: "Public Sans", var(--font-system);
   --font-brand: Rubik, var(--font-system);
-  --font-title: Recoleta, var(--font-system);
+  --font-recoleta: Recoleta, var(--font-system);
 
-  /* Transitions */
-  --theme-transition: 0.2s ease-in-out;
+  /* Colors */
+  --color-light: #e9d5ff;
+  --color-regular: #d8b4fe;
+  --color-dark: #a855f7;
+
+  --color-button-green: #d1fff1;
+  --color-button-pink: #c6f6ff;
+  --color-button-blue: #f9d9f9;
 }
 
-*,
-*::after,
-*::before {
-  box-sizing: border-box;
-  margin: 0;
+@layer base {
+  body {
+    background-color: var(--color-gray-50);
+    color: var(--color-gray-800);
+    font-family: var(--font-base);
+    width: 100%;
+    min-height: 100dvh;
+    overflow-x: hidden;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+  }
 }
 
-html,
-body {
-  height: 100%;
-  scroll-behavior: smooth;
+@utility base-container {
+  min-height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
-body {
-  background-color: var(--bg-color);
-  color: var(--gray-800);
-  font-family: var(--font-body);
-  -webkit-font-smoothing: antialiased;
-  line-height: 1.5;
+@utility wrapper {
+  --wrapper-padding: 2rem;
+
+  margin-inline: auto;
+  width: min(1110px, 100% - var(--wrapper-padding));
 }
 
-img {
-  width: 100%;
-  height: auto;
+@utility text-shadow-effect {
+  text-shadow:
+    0.25px 0.25px 0 var(--color-light),
+    0.5px 0.5px 0 var(--color-light),
+    0.75px 0.75px 0 var(--color-light),
+    1px 1px 0 var(--color-light),
+    1.25px 1.25px 0 var(--color-light),
+    1.5px 1.5px 0 var(--color-light),
+    1.75px 1.75px 0 var(--color-light),
+    2px 2px 0 var(--color-light),
+    2.25px 2.25px 0 var(--color-light),
+    2.5px 2.5px 0 var(--color-light),
+    2.75px 2.75px 0 var(--color-light),
+    3px 3px 0 var(--color-light),
+    3.25px 3.25px 0 var(--color-light),
+    3.5px 3.5px 0 var(--color-light),
+    3.75px 3.75px 0 var(--color-light),
+    4px 4px 0 var(--color-light),
+    5.25px 5.25px 0 var(--color-light),
+    5.5px 5.5px 0 var(--color-light),
+    5.75px 5.75px 0 var(--color-light),
+    6px 6px 0 var(--color-light);
 }
 
-a {
-  text-decoration: none;
-  color: var(--link-color);
+@utility border-shadow {
+  border-radius: 0.5rem;
+  border: 2px solid var(--color-gray-800);
+  box-shadow:
+    0.5px 1px 0 0 var(--color-gray-800),
+    1.5px 2px 0 0 var(--color-gray-800),
+    2.5px 3px 0 0 var(--color-gray-800),
+    3.5px 4px 0 0 var(--color-gray-800),
+    4.5px 5px 0 0 var(--color-gray-800),
+    5.5px 6px 0 0 var(--color-gray-800);
+  padding: 2rem;
 }
 
-ul {
-  list-style: none;
-  padding-left: 0;
+@utility underline-lift {
+  top: -0.35rem;
+  padding-bottom: 0.35rem;
+  border-bottom: 0.4rem solid var(--color-dark);
+  box-shadow: 0 0.8rem 0 -0.4rem var(--color-regular);
+  
+  @media(min-width: 64em) {
+    border-bottom: 0.2rem solid var(--color-dark);
+    box-shadow: 0 0.4rem 0 -0.2rem var(--color-regular);
+  }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  line-height: 1.1;
-  font-family: var(--font-title);
-  font-weight: 600;
-  color: var(--gray-900);
-}
-
+/* Scroll Bar */
 ::-webkit-scrollbar {
   width: 0.5em;
 }
@@ -124,11 +121,11 @@ h5 {
 }
 
 ::selection {
-  background-color: var(--accent-light);
+  background-color: var(--color-light);
 }
 
 :focus {
-  outline: 2px dashed var(--accent-dark);
+  outline: 2px dashed var(--color-dark);
   outline-offset: 2px;
 }
 
@@ -137,153 +134,13 @@ h5 {
   outline-offset: 0px;
 }
 
-/* Utilities */
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
-.base-container {
-  min-height: 100vh;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-}
-
-.wrapper {
-  --wrapper-padding: 2rem;
-
-  margin-inline: auto;
-  width: min(1110px, 100% - var(--wrapper-padding));
-}
-
 .stack {
   display: flex;
   flex-direction: column;
 }
 
-.shadow-letters {
-  text-shadow:
-    0.25px 0.25px 0 var(--shadow-letter),
-    0.5px 0.5px 0 var(--shadow-letter),
-    0.75px 0.75px 0 var(--shadow-letter),
-    1px 1px 0 var(--shadow-letter),
-    1.25px 1.25px 0 var(--shadow-letter),
-    1.5px 1.5px 0 var(--shadow-letter),
-    1.75px 1.75px 0 var(--shadow-letter),
-    2px 2px 0 var(--shadow-letter),
-    2.25px 2.25px 0 var(--shadow-letter),
-    2.5px 2.5px 0 var(--shadow-letter),
-    2.75px 2.75px 0 var(--shadow-letter),
-    3px 3px 0 var(--shadow-letter),
-    3.25px 3.25px 0 var(--shadow-letter),
-    3.5px 3.5px 0 var(--shadow-letter),
-    3.75px 3.75px 0 var(--shadow-letter),
-    4px 4px 0 var(--shadow-letter),
-    5.25px 5.25px 0 var(--shadow-letter),
-    5.5px 5.5px 0 var(--shadow-letter),
-    5.75px 5.75px 0 var(--shadow-letter),
-    6px 6px 0 var(--shadow-letter);
-}
-
-.bg-green {
-  background-color: #d1fff1;
-}
-
-.bg-blue {
-  background-color: #c6f6ff;
-}
-
-.bg-pink {
-  background-color: #f9d9f9;
-}
-
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-6 {
-  gap: 1.5rem;
-}
-
-.gap-8 {
-  gap: 2rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
-}
-
-.gap-15 {
-  gap: 3.75rem;
-}
-
-.gap-20 {
-  gap: 5rem;
-}
-
-.gap-30 {
-  gap: 7.5rem;
-}
-
-.gap-48 {
-  gap: 12rem;
-}
-
 @media (min-width: 50em) {
-
-  html,
-  body {
-    scroll-padding-top: 8rem;
-  }
-
   .wrapper {
     --wrapper-padding: 17rem;
-  }
-
-  .lg\:gap-2 {
-    gap: 0.5rem;
-  }
-
-  .lg\:gap-4 {
-    gap: 1rem;
-  }
-
-  .lg\:gap-6 {
-    gap: 1.5rem;
-  }
-
-  .lg\:gap-8 {
-    gap: 2rem;
-  }
-
-  .lg\:gap-10 {
-    gap: 2.5rem;
-  }
-
-  .lg\:gap-15 {
-    gap: 3.75rem;
-  }
-
-  .lg\:gap-20 {
-    gap: 5rem;
-  }
-
-  .lg\:gap-30 {
-    gap: 7.5rem;
-  }
-
-  .lg\:gap-48 {
-    gap: 12rem;
   }
 }
